--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -29,7 +29,7 @@
                 <div class="my-8 p-6 rounded-lg bg-gradient-to-r from-slate-50 to-slate-100 border-l-4 border-teal-500 shadow-md">
                     <div class="flex items-center">
                         <div class="flex-shrink-0">
-                            <svg class="h-12 w-12 text-teal-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <svg class="h-12 w-12 text-teal-500" xmlns="http://www.w.3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 002.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 00-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75 2.25 2.25 0 00-.1-.664m-5.8 0A2.251 2.251 0 0113.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C6.095 4.01 5.25 4.973 5.25 6.108V18.75c0 1.243.87 2.25 1.969 2.25H18A2.25 2.25 0 0020.25 18.75V8.25A2.25 2.25 0 0018 6H9.75A2.25 2.25 0 017.5 3.75m0 0A2.25 2.25 0 005.25 6" />
                             </svg>
                         </div>
@@ -67,10 +67,7 @@
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 1 - Devletin Şekli</summary>
                     <div class="mt-3 border-t pt-3">
                         <blockquote><p>"Türkiye Devleti bir Cumhuriyettir."</p></blockquote>
-                        <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
-                          <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test (Boşluk Doldurma):</p>
-                          <p class="text-sky-800">Türkiye Devleti bir ...................... .</p>
-                        </div>
+                        <p><strong>Hoca Yorumu:</strong> Bu madde, devletin yönetim biçimini net ve kesin olarak belirler. Kısa ama Anayasa'nın en temel cümlesidir.</p>
                     </div>
                 </details>
 
@@ -80,6 +77,7 @@
                         <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
                             <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır. Buradaki her bir kavram, potansiyel bir sınav sorusudur.</p>
                         </div>
+                        <blockquote><p>"Türkiye Cumhuriyeti, toplumun huzuru, milli dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p></blockquote>
                         <div class="uyari-kutusu my-4">
                             <p><strong>🧠 Hafıza Tekniği (Kodlama):</strong> Madde 2'deki temel nitelikleri unutmamak için şu kodlamayı kullanabilirsiniz: <strong>"İLAHİ D-S"</strong></p>
                             <ul class="list-none mt-2 space-y-1 font-mono">
@@ -92,18 +90,15 @@
                 <details id="madde-3" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p>Bu madde, devletin fiziksel ve ulusal kimliğini tanımlar.</p>
-                        <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
-                          <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test (Doğru/Yanlış):</p>
-                          <p class="text-sky-800">Anayasa'ya göre Türkiye Devleti'nin dili Türkçe'dir. (Doğru/Yanlış)</p>
-                        </div>
+                        <blockquote><p>"Türkiye Devleti, ülkesi ve milletiyle bölünmez bir bütündür. Dili Türkçedir. Bayrağı, şekli kanununda belirtilen, beyaz ay yıldızlı al bayraktır. Milli marşı "İstiklal Marşı"dır. Başkenti Ankara'dır."</p></blockquote>
                     </div>
                 </details>
 
                 <details id="madde-4" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 4 - Değiştirilemez Hükümler</summary>
                     <div class="mt-3 border-t pt-3">
-                        <p><strong>Hoca Yorumu:</strong> Bu madde, ilk üç maddenin "kalkanı"dır. Bu sayede ilk üç maddenin değiştirilmesi <strong>teklif dahi edilemez</strong>.</p>
+                        <blockquote><p>"Anayasanın 1 inci maddesindeki Devletin şeklinin Cumhuriyet olduğu hakkındaki hüküm ile, 2 nci maddesindeki Cumhuriyetin nitelikleri ve 3 üncü maddesi hükümleri değiştirilemez ve değiştirilmesi teklif edilemez."</p></blockquote>
+                        <p><strong>Hoca Yorumu:</strong> Bu madde, ilk üç maddenin "kalkanı"dır. Anahtar ifade: <strong>"teklif dahi edilemez."</strong></p>
                     </div>
                 </details>
 
@@ -112,6 +107,7 @@
                  <details id="madde-5" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 5 - Devletin Temel Amaç ve Görevleri</summary>
                     <div class="mt-3 border-t pt-3">
+                        <blockquote><p>"Devletin temel amaç ve görevleri, Türk milletinin bağımsızlığını ve bütünlüğünü, ülkenin bölünmezliğini, Cumhuriyeti ve demokrasiyi korumak, kişilerin ve toplumun refah, huzur ve mutluluğunu sağlamak; kişinin temel hak ve hürriyetlerini, sosyal hukuk devleti ve adalet ilkeleriyle bağdaşmayacak surette sınırlayan siyasal, ekonomik ve sosyal engelleri kaldırmaya, insanın maddi ve manevi varlığının gelişmesi için gerekli şartları hazırlamaya çalışmaktır."</p></blockquote>
                         <div class="uyari-kutusu mt-3">
                             <p><strong>🧠 Hafıza Tekniği (Fiil Kökleri):</strong> Bu uzun maddeyi ezberlemek yerine anahtar fiilleri aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
                         </div>
@@ -121,44 +117,23 @@
                 <details id="madde-6" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 6 - Egemenlik</summary>
                     <div class="mt-3 border-t pt-3">
-                        <blockquote><p>Egemenlik, kayıtsız şartsız Milletindir...</p></blockquote>
-                        <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-500 rounded">
-                          <p class="font-semibold mb-2 text-sky-900">🧪 Mini Test:</p>
-                          <p class="text-sky-800">Egemenlik kimindir ve hangi organlar eliyle kullanılır?</p>
-                        </div>
+                        <blockquote><p>"Egemenlik, kayıtsız şartsız Milletindir. Türk Milleti, egemenliğini, Anayasanın koyduğu esaslara göre, yetkili organları eliyle kullanır. Egemenliğin kullanılması, hiçbir surette hiçbir kişiye, zümreye veya sınıfa bırakılamaz. Hiçbir kimse veya organ kaynağını Anayasadan almayan bir Devlet yetkisi kullanamaz."</p></blockquote>
                     </div>
                 </details>
 
                 <div id="kuvvetler-ayriligi" class="my-6">
                     <h4 class="text-center font-bold text-lg mb-4">📊 Kavram Haritası: Kuvvetler Ayrılığı</h4>
                     <div class="flex flex-col md:flex-row gap-4 text-center">
-                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-md">
-                            <h5 class="font-bold text-blue-800">YASAMA</h5>
-                            <p class="text-sm text-slate-600">(Madde 7)</p>
-                            <hr class="my-2">
-                            <p><strong>Organ:</strong> T.B.M.M.</p>
-                            <p><strong>Görev:</strong> Kanun Yapmak</p>
-                        </div>
-                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-md">
-                            <h5 class="font-bold text-red-800">YÜRÜTME</h5>
-                            <p class="text-sm text-slate-600">(Madde 8)</p>
-                            <hr class="my-2">
-                            <p><strong>Organ:</strong> Cumhurbaşkanı</p>
-                            <p><strong>Görev:</strong> Uygulamak</p>
-                        </div>
-                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-md">
-                            <h5 class="font-bold text-green-800">YARGI</h5>
-                            <p class="text-sm text-slate-600">(Madde 9)</p>
-                            <hr class="my-2">
-                            <p><strong>Organ:</strong> Bağımsız ve Tarafsız Mahkemeler</p>
-                            <p><strong>Görev:</strong> Yargılamak</p>
-                        </div>
+                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-md"><h5 class="font-bold text-blue-800">YASAMA</h5><hr class="my-2"><p><strong>Organ:</strong> T.B.M.M.</p><p><strong>Görev:</strong> Kanun Yapmak</p></div>
+                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-md"><h5 class="font-bold text-red-800">YÜRÜTME</h5><hr class="my-2"><p><strong>Organ:</strong> Cumhurbaşkanı</p><p><strong>Görev:</strong> Uygulamak</p></div>
+                        <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-md"><h5 class="font-bold text-green-800">YARGI</h5><hr class="my-2"><p><strong>Organ:</strong> Bağımsız ve Tarafsız Mahkemeler</p><p><strong>Görev:</strong> Yargılamak</p></div>
                     </div>
                 </div>
 
                 <details id="madde-10" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 10 - Eşitlik İlkesi</summary>
                     <div class="mt-3 border-t pt-3">
+                        <blockquote><p>"Herkes, dil, ırk, renk, cinsiyet, siyasi düşünce, felsefi inanç, din, mezhep ve benzeri sebeplerle ayırım gözetilmeksizin kanun önünde eşittir..."</p></blockquote>
                         <div class="uyari-kutusu mt-3">
                             <p><strong>💡 Anlamlandırma Kutusu: Pozitif Ayrımcılık</strong><br>
                             Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir.</p>
@@ -169,10 +144,21 @@
                 <details id="madde-11" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                     <summary class="font-semibold text-lg cursor-pointer">📘 Madde 11 - Anayasanın Üstünlüğü</summary>
                     <div class="mt-3 border-t pt-3">
-                         <p><strong>Hoca Yorumu:</strong> Bu, "Normlar Hiyerarşisi" ilkesinin temelidir. Hiçbir kanun veya kural, Anayasa'dan daha üstün değildir.</p>
+                        <blockquote><p>"Anayasa hükümleri, yasama, yürütme ve yargı organlarını, idare makamlarını ve diğer kuruluş ve kişileri bağlayan temel hukuk kurallarıdır. Kanunlar Anayasaya aykırı olamaz."</p></blockquote>
+                        <p><strong>Hoca Yorumu:</strong> Bu, "Normlar Hiyerarşisi" ilkesinin temelidir. Hiçbir kanun veya kural, Anayasa'dan daha üstün değildir.</p>
                     </div>
                 </details>
                 
+                <div class="mt-8 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg shadow-md">
+                    <h3 class="font-bold text-sky-900 text-xl mb-4">🧪 Hızlı Tekrar Testi</h3>
+                    <div class="space-y-4">
+                        <p><strong>1. Boşluk Doldurma:</strong> Türkiye Devleti bir ...................... .</p>
+                        <p><strong>2. Doğru/Yanlış:</strong> Anayasa'nın ilk dört maddesinin değiştirilmesi teklif edilebilir. (D/Y)</p>
+                        <p><strong>3. Sıralama:</strong> Normlar Hiyerarşisine göre en üstün olan norm hangisidir?</p>
+                        <p><strong>4. Kavram:</strong> Devletin, dezavantajlı gruplar için aldığı ek tedbirlere ne ad verilir?</p>
+                    </div>
+                </div>
+
                 <div class="bg-green-100 p-4 rounded-lg shadow mt-8 border-l-4 border-green-600">
                   <strong class="text-green-800">✅ Bu Bölümde Öğrendiklerimiz:</strong>
                   <ul class="list-disc pl-5 mt-2 text-green-900">
